--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -12,7 +12,9 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
-        <activity android:name=".activity.TestingPlayer"></activity>
+        <activity
+            android:name=".activity.TestingPlayer"
+            android:launchMode="singleInstance" />
         <activity
             android:name=".activity.PlayerActivity"
             android:launchMode="singleInstance" />
